[package]
name = "advent_of_code"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
pico-args = "0.5.0"
aoc-cli = "0.12.0"
chatgpt = "0.1.0"
itertools = "0.11.0"
nom = "7.1.3"
grid = "0.11.0"
